--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
             margin: 0;
             padding: 2rem;
         }
-        a{
+
+        a {
             color: #003366;
         }
-        a:hover{
+
+        a:hover {
             color: #f6a709;
         }
 
@@ -27,7 +29,7 @@
         }
 
         h2 {
-            font-size: 1.3rempx;       
+            font-size: 1.3rempx;
         }
 
         p {
@@ -59,9 +61,12 @@
                 <li><a href="#intro">Introdução</a></li>
                 <li><a href="#lgpd">LGPD um quebra-cabeça de regras!</a></li>
                 <li><a href="#missao">A missão impossível</a></li>
-                <li><a href="#pilares">Os pilares da LGPD: Confiança e responsabilidade... e um pouco de confusão!</a></li>
-                <li><a href="#mudancas">As maiores mudanças trazidas pela LGPD: Do "Wild West" para o "Data Care"</a></li>
+                <li><a href="#pilares">Os pilares da LGPD: Confiança e responsabilidade... e um pouco de confusão!</a>
+                </li>
+                <li><a href="#mudancas">As maiores mudanças trazidas pela LGPD: Do "Wild West" para o "Data Care"</a>
+                </li>
                 <li><a href="#redes">Redes sociais e LGPD: Amigos ou inimigos?</a></li>
+                <li><a href="#empresas">Mudanças para as Empresas - Uma Revolução na Gestão de Dados</a></li>
             </ul>
         </nav>
     </header>
@@ -82,6 +87,7 @@
                 pessoais. Imagine suas informações como peças de um quebra-cabeça, e a LGPD é a caixa com as instruções
                 para montá-lo corretamente. Ela estabelece como nossos dados devem ser coletados, armazenados, usados e
                 protegidos. Em resumo, é uma tentativa de frear a bagunça desenfreada com nossas informações.</p>
+
         </section>
 
         <section id="missao">
@@ -92,7 +98,7 @@
                 nós, pobres usuários digitais.</p>
         </section>
 
-        <section id="pilares"> 
+        <section id="pilares">
             <h2>Os pilares da LGPD: Confiança e responsabilidade... e um pouco de confusão!</h2>
             <p>A LGPD se apoia em dois pilares fundamentais: confiança e responsabilidade. As empresas precisam ser
                 transparentes sobre como coletam e usam nossos dados, além de assumirem a responsabilidade de
@@ -111,7 +117,24 @@
 
         <section id="redes">
             <h2>Redes sociais e LGPD: Amigos ou inimigos?</h2>
-            <p>Nossas amadas redes sociais podem ser um campo minado quando se trata de LGPD. Lembra das fotos que você postou de um momento embaraçoso? Elas estão sujeitas a serem usadas além do que você imagina. Agora, é hora de tomar cuidado e rever as configura</p>
+            <p>Nossas amadas redes sociais podem ser um campo minado quando se trata de LGPD. Lembra das fotos que você
+                postou de um momento embaraçoso? Elas estão sujeitas a serem usadas além do que você imagina. Agora, é
+                hora de tomar cuidado e rever as configurações de privacidade, escolha cuidadosamente com quem
+                compartilhar seus momentos especiais.
+            </p>
+        </section>
+
+        <section id="empresas">
+            <h2>Mudanças para as Empresas - Uma Revolução na Gestão de Dados</h2>
+            <p>As empresas também precisaram se adaptar à LGPD. Agora, elas devem implementar medidas de segurança
+                robustas, como um cofre impenetrável para proteger seus dados. Além disso, é necessário ter políticas
+                claras de privacidade, treinar seus funcionários sobre a importância da proteção de dados e designar um
+                responsável pela gestão dessas informações, como um maestro regendo uma orquestra de privacidade.</p>
+        </section>
+
+        <section id="conclusao">
+            <h2>Conclusão</h2>
+            <p>A LGPD é uma trilha que nos conduz a um mundo digital mais seguro e respeitoso. Com seus pilares sólidos, ela protege nossa privacidade e nos dá controle sobre nossos próprios dados. Seja consciente, navegue com segurança e aproveite a era digital de forma responsável!</p>
         </section>
 
     </article>
