--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
         a:hover {
             color: #f6a709;
+            font-weight: 600;
         }
 
         h1 {
@@ -29,7 +30,8 @@
         }
 
         h2 {
-            font-size: 1.3rempx;
+            font-size: 1.3rem;
+            color:#4a90c0;
         }
 
         p {
