--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </article>
 
     <footer>
-        <p>© 2023 Meu Site. Todos os direitos reservados.</p>
+        <p>Conheça meu <a href="https://www.linkedin.com/in/ilnaraackeramann" target="_blank" rel="noopener noreferrer">LinkdIn</a>, e veja mais projetos no meu <a href="https://github.com/IlnaraAckermann" target="_blank" rel="noopener noreferrer">GitHub</a></p>
     </footer>
 </body>
 
