--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         h2 {
             font-size: 1.3rem;
-            color:#4a90c0;
+            color: #4a90c0;
         }
 
         p {
@@ -54,95 +54,116 @@
 </head>
 
 <body>
-    <header>
-        <h1>LGPD: A Revolução dos Dados com um Toque de Lei e Confusão</h1>
-        <p>Autor: ChatGPT</p>
-        <p>Publicado em 25 de maio de 2023</p>
-        <nav>
-            <ul>
-                <li><a href="#intro">Introdução</a></li>
-                <li><a href="#lgpd">LGPD um quebra-cabeça de regras!</a></li>
-                <li><a href="#missao">A missão impossível</a></li>
-                <li><a href="#pilares">Os pilares da LGPD: Confiança e responsabilidade... e um pouco de confusão!</a>
-                </li>
-                <li><a href="#mudancas">As maiores mudanças trazidas pela LGPD: Do "Wild West" para o "Data Care"</a>
-                </li>
-                <li><a href="#redes">Redes sociais e LGPD: Amigos ou inimigos?</a></li>
-                <li><a href="#empresas">Mudanças para as Empresas - Uma Revolução na Gestão de Dados</a></li>
-            </ul>
-        </nav>
-    </header>
+    <main>
+        <article>
+            <header>
+                <h1>LGPD: A Revolução dos Dados com um Toque de Lei e Confusão</h1>
+                <p>Autor: ChatGPT</p>
+                <p>Publicado em <time pubdate> 25/05/2023</time></p>
+                <nav>
+                    <ul>
+                        <li><a href="#intro">Introdução</a></li>
+                        <li><a href="#lgpd">LGPD um quebra-cabeça de regras!</a></li>
+                        <li><a href="#missao">A missão impossível</a></li>
+                        <li><a href="#pilares">Os pilares da LGPD: Confiança e responsabilidade... e um pouco de
+                                confusão!</a>
+                        </li>
+                        <li><a href="#mudancas">As maiores mudanças trazidas pela LGPD: Do "Wild West" para o "Data
+                                Care"</a>
+                        </li>
+                        <li><a href="#redes">Redes sociais e LGPD: Amigos ou inimigos?</a></li>
+                        <li><a href="#empresas">Mudanças para as Empresas - Uma Revolução na Gestão de Dados</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <section id="intro">
+                <h2>Introdução</h2>
+                <p>Bem-vindos, caros leitores, ao mundo da LGPD - a Lei Geral de Proteção de Dados. Preparem-se para uma
+                    jornada divertida e cheia de reflexões sobre como lidamos com nossas informações pessoais nesse
+                    universo
+                    digital cada vez mais maluco. Vamos desvendar o que é a LGPD, por que ela foi criada, seus pilares,
+                    mudanças trazidas e até mesmo o que devemos fazer com nossas redes sociais. Afinal, se vamos falar
+                    sobre
+                    leis, por que não fazer isso com uma pitada de bom humor?</p>
+            </section>
 
-    <article>
-        <section id="intro">
-            <h2>Introdução</h2>
-            <p>Bem-vindos, caros leitores, ao mundo da LGPD - a Lei Geral de Proteção de Dados. Preparem-se para uma
-                jornada divertida e cheia de reflexões sobre como lidamos com nossas informações pessoais nesse universo
-                digital cada vez mais maluco. Vamos desvendar o que é a LGPD, por que ela foi criada, seus pilares,
-                mudanças trazidas e até mesmo o que devemos fazer com nossas redes sociais. Afinal, se vamos falar sobre
-                leis, por que não fazer isso com uma pitada de bom humor?</p>
-        </section>
+            <section id="lgpd">
+                <h2>LGPD um quebra-cabeça de regras!</h2>
+                <p>Ah, a LGPD, tão falada e comentada. Ela é como um quebra-cabeça gigante que visa proteger nossos
+                    dados
+                    pessoais. Imagine suas informações como peças de um quebra-cabeça, e a LGPD é a caixa com as
+                    instruções
+                    para montá-lo corretamente. Ela estabelece como nossos dados devem ser coletados, armazenados,
+                    usados e
+                    protegidos. Em resumo, é uma tentativa de frear a bagunça desenfreada com nossas informações.</p>
 
-        <section id="lgpd">
-            <h2>LGPD um quebra-cabeça de regras!</h2>
-            <p>Ah, a LGPD, tão falada e comentada. Ela é como um quebra-cabeça gigante que visa proteger nossos dados
-                pessoais. Imagine suas informações como peças de um quebra-cabeça, e a LGPD é a caixa com as instruções
-                para montá-lo corretamente. Ela estabelece como nossos dados devem ser coletados, armazenados, usados e
-                protegidos. Em resumo, é uma tentativa de frear a bagunça desenfreada com nossas informações.</p>
+            </section>
 
-        </section>
+            <section id="missao">
+                <h2>A missão impossível!</h2>
+                <p>A LGPD surgiu para combater as práticas invasivas de empresas que abusavam de nossos dados pessoais.
+                    Lembra daquele anúncio de um produto que você apenas mencionou em uma conversa? Parecia mágica, mas
+                    era
+                    pura invasão de privacidade. A missão da LGPD é trazer mais transparência, controle e segurança para
+                    nós, pobres usuários digitais.</p>
+            </section>
 
-        <section id="missao">
-            <h2>A missão impossível!</h2>
-            <p>A LGPD surgiu para combater as práticas invasivas de empresas que abusavam de nossos dados pessoais.
-                Lembra daquele anúncio de um produto que você apenas mencionou em uma conversa? Parecia mágica, mas era
-                pura invasão de privacidade. A missão da LGPD é trazer mais transparência, controle e segurança para
-                nós, pobres usuários digitais.</p>
-        </section>
+            <section id="pilares">
+                <h2>Os pilares da LGPD: Confiança e responsabilidade... e um pouco de confusão!</h2>
+                <p>A LGPD se apoia em dois pilares fundamentais: confiança e responsabilidade. As empresas precisam ser
+                    transparentes sobre como coletam e usam nossos dados, além de assumirem a responsabilidade de
+                    protegê-los como se fossem um tesouro. Mas, vamos combinar, a confusão também está presente nesse
+                    cenário. Afinal, entender os termos jurídicos e a complexidade da lei pode deixar qualquer um com
+                    dor de
+                    cabeça.</p>
+            </section>
 
-        <section id="pilares">
-            <h2>Os pilares da LGPD: Confiança e responsabilidade... e um pouco de confusão!</h2>
-            <p>A LGPD se apoia em dois pilares fundamentais: confiança e responsabilidade. As empresas precisam ser
-                transparentes sobre como coletam e usam nossos dados, além de assumirem a responsabilidade de
-                protegê-los como se fossem um tesouro. Mas, vamos combinar, a confusão também está presente nesse
-                cenário. Afinal, entender os termos jurídicos e a complexidade da lei pode deixar qualquer um com dor de
-                cabeça.</p>
-        </section>
+            <section id="mudancas">
+                <h2>As maiores mudanças trazidas pela LGPD: Do "Wild West" para o "Data Care"</h2>
+                <p>A LGPD trouxe algumas mudanças significativas. Agora, empresas precisam solicitar nosso consentimento
+                    claro para coletar e usar nossos dados. O "Wild West" dos dados está sendo domado, e passamos para
+                    uma
+                    era mais consciente chamada "Data Care". Além disso, ganhamos o direito de acessar, corrigir e até
+                    mesmo
+                    excluir nossas informações pessoais. É como ter um controle remoto para nossos próprios dados!</p>
+            </section>
 
-        <section id="mudancas">
-            <h2>As maiores mudanças trazidas pela LGPD: Do "Wild West" para o "Data Care"</h2>
-            <p>A LGPD trouxe algumas mudanças significativas. Agora, empresas precisam solicitar nosso consentimento
-                claro para coletar e usar nossos dados. O "Wild West" dos dados está sendo domado, e passamos para uma
-                era mais consciente chamada "Data Care". Além disso, ganhamos o direito de acessar, corrigir e até mesmo
-                excluir nossas informações pessoais. É como ter um controle remoto para nossos próprios dados!</p>
-        </section>
+            <section id="redes">
+                <h2>Redes sociais e LGPD: Amigos ou inimigos?</h2>
+                <p>Nossas amadas redes sociais podem ser um campo minado quando se trata de LGPD. Lembra das fotos que
+                    você
+                    postou de um momento embaraçoso? Elas estão sujeitas a serem usadas além do que você imagina. Agora,
+                    é
+                    hora de tomar cuidado e rever as configurações de privacidade, escolha cuidadosamente com quem
+                    compartilhar seus momentos especiais.
+                </p>
+            </section>
 
-        <section id="redes">
-            <h2>Redes sociais e LGPD: Amigos ou inimigos?</h2>
-            <p>Nossas amadas redes sociais podem ser um campo minado quando se trata de LGPD. Lembra das fotos que você
-                postou de um momento embaraçoso? Elas estão sujeitas a serem usadas além do que você imagina. Agora, é
-                hora de tomar cuidado e rever as configurações de privacidade, escolha cuidadosamente com quem
-                compartilhar seus momentos especiais.
-            </p>
-        </section>
+            <section id="empresas">
+                <h2>Mudanças para as Empresas - Uma Revolução na Gestão de Dados</h2>
+                <p>As empresas também precisaram se adaptar à LGPD. Agora, elas devem implementar medidas de segurança
+                    robustas, como um cofre impenetrável para proteger seus dados. Além disso, é necessário ter
+                    políticas
+                    claras de privacidade, treinar seus funcionários sobre a importância da proteção de dados e designar
+                    um
+                    responsável pela gestão dessas informações, como um maestro regendo uma orquestra de privacidade.
+                </p>
+            </section>
 
-        <section id="empresas">
-            <h2>Mudanças para as Empresas - Uma Revolução na Gestão de Dados</h2>
-            <p>As empresas também precisaram se adaptar à LGPD. Agora, elas devem implementar medidas de segurança
-                robustas, como um cofre impenetrável para proteger seus dados. Além disso, é necessário ter políticas
-                claras de privacidade, treinar seus funcionários sobre a importância da proteção de dados e designar um
-                responsável pela gestão dessas informações, como um maestro regendo uma orquestra de privacidade.</p>
-        </section>
+            <section id="conclusao">
+                <h2>Conclusão</h2>
+                <p>A LGPD é uma trilha que nos conduz a um mundo digital mais seguro e respeitoso. Com seus pilares
+                    sólidos, ela protege nossa privacidade e nos dá controle sobre nossos próprios dados. Seja
+                    consciente, navegue com segurança e aproveite a era digital de forma responsável!</p>
+            </section>
 
-        <section id="conclusao">
-            <h2>Conclusão</h2>
-            <p>A LGPD é uma trilha que nos conduz a um mundo digital mais seguro e respeitoso. Com seus pilares sólidos, ela protege nossa privacidade e nos dá controle sobre nossos próprios dados. Seja consciente, navegue com segurança e aproveite a era digital de forma responsável!</p>
-        </section>
+        </article>
 
-    </article>
-
+    </main>
     <footer>
-        <p>Conheça meu <a href="https://www.linkedin.com/in/ilnaraackermann" target="_blank" rel="noopener noreferrer">LinkdIn</a>, e veja mais projetos no meu <a href="https://github.com/IlnaraAckermann" target="_blank" rel="noopener noreferrer">GitHub</a></p>
+        <p>Conheça meu <a href="https://www.linkedin.com/in/ilnaraackermann" target="_blank"
+                rel="noopener noreferrer">LinkdIn</a>, e veja mais projetos no meu <a
+                href="https://github.com/IlnaraAckermann" target="_blank" rel="noopener noreferrer">GitHub</a></p>
     </footer>
 </body>
 
